--- a/result/views/stylesheets/style.css
+++ b/result/views/stylesheets/style.css
@@ -25,11 +25,11 @@ body{
 }
 
 #background-stats-1{
-  background-color: #2196f3;
+  background-color: green;
 }
 
 #background-stats-2{
-  background-color: #00cbca;
+  background-color: yellow;
 }
 
 #content-container{
